--- a/lib/capistrano/templates/puma-deb.erb
+++ b/lib/capistrano/templates/puma-deb.erb
@@ -1,6 +1,7 @@
 #! /bin/sh
+
 ### BEGIN INIT INFO
-# Provides:          puma 
+# Provides:          puma
 # Required-Start:    $remote_fs $syslog
 # Required-Stop:     $remote_fs $syslog
 # Default-Start:     2 3 4 5
@@ -33,7 +34,7 @@ USE_LOCAL_BUNDLE=0
 . /lib/lsb/init-functions
 
 #
-# Function that starts the jungle 
+# Function that starts the jungle
 #
 do_start() {
   log_daemon_msg "=> Running the jungle..."
@@ -44,6 +45,7 @@ do_start() {
 }
 
 do_start_one() {
+  log_daemon_msg "   puma: $1"
   PIDFILE=$1/tmp/pids/puma.pid
   if [ -e $PIDFILE ]; then
     PID=`cat $PIDFILE`
@@ -59,12 +61,15 @@ do_start_one() {
 }
 
 do_start_one_do() {
+  log_daemon_msg "---> do_start_one_do"
   i=`grep $1 $CONFIG`
   dir=`echo $i | cut -d , -f 1`
   user=`echo $i | cut -d , -f 2`
   config_file=`echo $i | cut -d , -f 3`
   if [ "$config_file" = "" ]; then
-    config_file="$dir/config/puma.rb"
+# this needs to match the way puma would start without a jungle
+#    config_file="$dir/config/puma.rb"
+    config_file="<%=fetch(:puma_conf)%>"
   fi
   log_file=`echo $i | cut -d , -f 4`
   if [ "$log_file" = "" ]; then
@@ -72,9 +77,9 @@ do_start_one_do() {
   fi
   environment=`echo $i | cut -d , -f 5`
 
-  log_daemon_msg "--> Woke up puma $dir"
-  log_daemon_msg "user $user"
-  log_daemon_msg "log to $log_file"
+  log_daemon_msg "---> Woke up puma $dir"
+  log_daemon_msg "     user $user"
+  log_daemon_msg "     log to $log_file"
 
   if [ ! -z "$environment" ]; then
     for e in $(echo "$environment" | tr ';' '\n'); do
@@ -83,6 +88,7 @@ do_start_one_do() {
     done
   fi
 
+  log_daemon_msg "     start-stop-daemon --verbose --start --chdir $dir --chuid $user --background --exec $RUNPUMA -- $dir $config_file $log_file"
   start-stop-daemon --verbose --start --chdir $dir --chuid $user --background --exec $RUNPUMA -- $dir $config_file $log_file
 }
 
@@ -124,7 +130,7 @@ do_stop_one() {
 }
 
 #
-# Function that restarts the jungle 
+# Function that restarts the jungle
 #
 do_restart() {
   for i in $JUNGLE; do
@@ -137,14 +143,15 @@ do_restart() {
 # Function that sends a SIGUSR2 to the daemon/service
 #
 do_restart_one() {
+  log_daemon_msg "---> do_restart_one"
   PIDFILE=$1/tmp/pids/puma.pid
 
   if [ -e $PIDFILE ]; then
-    log_daemon_msg "--> About to restart puma $1"
+    log_daemon_msg "---> About to restart puma $1"
     kill -s USR2 `cat $PIDFILE`
     # TODO Check if process exist
   else
-    log_daemon_msg "--> Your puma was never playing... Let's get it out there first"
+    log_daemon_msg "---> Your puma was never playing... Let's get it out there first"
     do_start_one $1
   fi
 	return 0
@@ -165,20 +172,19 @@ do_phased_restart() {
 #
 do_phased_restart_one() {
   PIDFILE=$1/tmp/pids/puma.pid
-
   if [ -e $PIDFILE ]; then
-    log_daemon_msg "--> About to restart puma $1"
+    log_daemon_msg "---> About to restart puma $1"
     kill -s USR1 `cat $PIDFILE`
     # TODO Check if process exist
   else
-    log_daemon_msg "--> Your puma was never playing... Let's get it out there first"
+    log_daemon_msg "---> Your puma was never playing... Let's get it out there first"
     do_start_one $1
   fi
 	return 0
 }
 
 #
-# Function that statuss the jungle 
+# Function that statuss the jungle
 #
 do_status() {
   for i in $JUNGLE; do
@@ -194,9 +200,9 @@ do_status_one() {
   PIDFILE=$1/tmp/pids/puma.pid
   i=`grep $1 $CONFIG`
   dir=`echo $i | cut -d , -f 1`
-  
+
   if [ -e $PIDFILE ]; then
-    log_daemon_msg "--> About to status puma $1"
+    log_daemon_msg "---> About to status puma $1"
     if [ "$USE_LOCAL_BUNDLE" -eq 1 ]; then
       cd $1 && bundle exec pumactl --state $dir/tmp/pids/puma.state stats
     else
@@ -205,7 +211,7 @@ do_status_one() {
     # kill -s USR2 `cat $PIDFILE`
     # TODO Check if process exist
   else
-    log_daemon_msg "--> $1 isn't there :(..." 
+    log_daemon_msg "---> $1 isn't there :(..."
   fi
 	return 0
 }
@@ -218,7 +224,7 @@ do_add() {
       str=$1
     else
       echo "The app is already being managed. Remove it if you want to update its config."
-      exit 1 
+      exit 1
     fi
   else
     echo "The directory $1 doesn't exist."
@@ -250,7 +256,7 @@ do_add() {
     str="$str,$5"
   fi
 
-  # Add it to the jungle 
+  # Add it to the jungle
   echo $str >> $CONFIG
   log_daemon_msg "Added a Puma to the jungle: $str. You still have to start it though."
 }
@@ -288,13 +294,15 @@ config_bundler() {
     USE_LOCAL_BUNDLE=1
     return 0
 
-  # TODO: test rvm
-  # elif [ -f  /etc/profile.d/rvm.sh ]; then
-  #   source /etc/profile.d/rvm.sh
-  # elif [ -f /usr/local/rvm/scripts/rvm ]; then
-  #   source /etc/profile.d/rvm.sh
-  # elif [ -f "$HOME/.rvm/scripts/rvm" ]; then
-  #   source "$HOME/.rvm/scripts/rvm"
+   elif [ -f  /etc/profile.d/rvm.sh ]; then
+     log_daemon_msg "trying: source /etc/profile.d/rvm.sh"
+     #source /etc/profile.d/rvm.sh
+     . /etc/profile.d/rvm.sh
+   elif [ -f /usr/local/rvm/scripts/rvm ]; then
+    log_daemon_msg "trying: source /usr/local/rvm/scripts/rvm"
+     . /usr/local/rvm/scripts/rvm
+   elif [ -f "$HOME/.rvm/scripts/rvm" ]; then
+     . "$HOME/.rvm/scripts/rvm"
   # TODO: don't know what to do with chruby
   # elif [ -f /usr/local/share/chruby/chruby.sh ]; then
   #   source /usr/local/share/chruby/chruby.sh
