make gzip default

--- a/lib/capistrano/templates/nginx_conf.erb
+++ b/lib/capistrano/templates/nginx_conf.erb
@@ -39,6 +39,13 @@ server {
   root <%= current_path %>/public;
   try_files $uri/index.html $uri @puma_<%= fetch(:nginx_config_name) %>;
 
+  gzip on;
+  gzip_http_version 1.0;
+  gzip_vary on;
+  gzip_comp_level 4;
+  gzip_proxied any;
+  gzip_types application/octet-stream text/plain text/css application/json application/javascript application/x-javascript text/javascript text/xml application/xml application/rss+xml application/atom+xml application/rdf+xml application/wasm
+
   client_max_body_size 4G;
   keepalive_timeout 10;
 
